--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,12 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@tanstack/react-query": "^5.80.7",
+    "better-auth": "^1.2.12",
     "dayjs": "^1.11.13",
     "plotly.js": "^2.35.2",
     "plotly.js-dist": "^2.35.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-plotly.js": "^2.6.0",
     "react-router": "^7.6.2",
     "recharts": "^3.0.2"
@@ -27,32 +28,32 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^4.0.1",
     "@eslint/js": "^9.13.0",
-    "@storybook/addon-a11y": "^9.0.14",
-    "@storybook/addon-docs": "^9.0.14",
-    "@storybook/addon-onboarding": "^9.0.14",
-    "@storybook/addon-vitest": "^9.0.14",
-    "@storybook/react-vite": "^9.0.14",
+    "@storybook/addon-a11y": "^9.0.17",
+    "@storybook/addon-docs": "^9.0.17",
+    "@storybook/addon-onboarding": "^9.0.17",
+    "@storybook/addon-vitest": "^9.0.17",
+    "@storybook/react-vite": "^9.0.17",
     "@tailwindcss/postcss": "^4.1.10",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.5.2",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@vitejs/plugin-react": "^4.6.0",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "eslint-plugin-storybook": "^9.0.14",
+    "eslint-plugin-storybook": "^9.0.17",
     "globals": "^15.11.0",
     "msw": "^2.10.3",
     "msw-storybook-addon": "^2.0.5",
     "playwright": "^1.53.2",
     "postcss": "^8.4.49",
-    "storybook": "^9.0.14",
+    "storybook": "^9.0.17",
     "storybook-addon-remix-react-router": "^5.0.0",
     "tailwindcss": "^4.1.10",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.35.1",
-    "vite": "^6.3.5",
+    "vite": "^7.0.0",
     "vitest": "^3.2.4"
   },
   "msw": {
