--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -20,11 +20,18 @@ dependencies = [
     "passlib (>=1.7.4,<2.0.0)",
     "python-multipart (>=0.0.20,<0.0.21)",
     "convergent-engine @ ../engine",
+    "pytest >=8.0.0,<9.0.0",
+    "httpx >=0.27.0,<1.0.0",
+    "bcrypt (>=4.3.0,<5.0.0)"
 ]
 
 
 [tool.poetry]
 package-mode = false
+
+
+[tool.pytest.ini_options]
+pythonpath = ["."]
 
 
 [build-system]
